provisioning/stream/kubernetes/deploy/api/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stream-api
  namespace: stream
  labels:
    app: stream-api
    releaseId: dev-my-release
spec:
  podSelector:
    matchLabels:
      app: stream-api
  policyTypes:
    - Ingress
  ingress:
    # API
    - ports:
        - port: 8000
    # Metrics
    - ports:
        - port: 9000
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: datadog
          podSelector:
            matchLabels:
              app: datadog-agent
